# swagger_server/swagger/swagger.yaml
@@ -122,6 +122,28 @@ paths:
         404:
           description: "User not found"
       x-swagger-router-controller: "swagger_server.controllers.users_controller"
+  /domo/:
+    post:
+      tags:
+      - "domo"
+      summary: "Add a new domo"
+      description: "Add domo"
+      operationId: "add_domo"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Add new Domo"
+        required: false
+        schema:
+          $ref: "#/definitions/Domo"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Domo"
+        405:
+          description: "Invalid input"
+      x-swagger-router-controller: "swagger_server.controllers.domo_controller"
   /domo/{id}:
     get:
       tags:
@@ -170,7 +192,7 @@ paths:
         200:
           description: "successful operation"
           schema:
-            $ref: "#/definitions/Domo"
+            $ref: "#/definitions/User"
         400:
           description: "Invalid ID supplied"
         404:
@@ -596,10 +618,10 @@ definitions:
         format: "format64"
       name:
         type: "string"
-      DateTime:
+      datetime:
         type: "string"
         format: "date-time"
-      Timezone:
+      timezone:
         type: "string"
       voice:
         $ref: "#/definitions/Voice"
